--- a/public_html/assets/css/bootstrap.css
+++ b/public_html/assets/css/bootstrap.css
@@ -5018,6 +5018,7 @@ footer.lfooter{
 footer .blck {
 	background: #222;
 	margin: 0 0 10px 0;
+	position: absolute;
 	}
 
 footer h2{
